--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "astro": "^4.1.3",
+    "lite-youtube-embed": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lite-youtube-embed": "^2.4.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3",
     "zustand": "^4.5.0"
